[package]
name = "grion_propiedades"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
axum = "0.8.8"
chrono = { version = "0.4.43", features = ["serde"] }
env_logger = "0.11.9"
jsonwebtoken = "10.3.0"
log = "0.4.29"
once_cell = "1.21.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
surrealdb = "3.0.0"
tokio = { version = "1.49.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors"] }

[dev-dependencies]
pretty_assertions = "1.4.1"
rstest = "0.26.1"
